--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,15 @@
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background-color: #F9F9FA;
-    height: 100vh;
+    min-height: 100vh;
+   
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.container{
+     min-height: 100%;
 }
 
 .header-wrapper{
@@ -54,6 +62,7 @@ li a{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 30px;
 }
 
 .Section{
@@ -65,12 +74,14 @@ li a{
     border-radius: 5px;
     height: 700px;
     width: 80%;
+    flex-wrap: wrap;
 }
 
 .left{
     display: flex;
     flex-direction: column;
    gap: 30px;
+   margin-bottom: 30px;
 }
 
 .left-box{
@@ -85,6 +96,7 @@ li a{
     display: flex;
     flex-direction: column;
    gap: 30px;
+   margin-bottom: 30px;
 }
 
 .middle-box{
@@ -97,10 +109,8 @@ li a{
 }
 
 .right{
-    display: flex;
-    flex-direction: column;
-    height: 630px;
-
+    height: 640px;
+    margin-bottom: 30px;
 }
 
 .right-box{
@@ -118,4 +128,7 @@ li a{
     background-color: #30324A;
     color: white;
     height: 50px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
 }
