--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 5px;
-    width: 80%;
+    width: 82%;
 }
 
 ul{
@@ -54,7 +54,7 @@ li a{
 }
 
 .home-title{
-    margin-left: 170px;
+    margin-left: 9%;
     margin-top: 50px;
 }
 
