--- a/styles.css
+++ b/styles.css
@@ -137,3 +137,45 @@ a{
     position: fixed;
     bottom: 0;
 }
+
+.contact-wrapper{
+    margin-left: 9%;
+    margin-top: 50px;
+    width: 50%;
+}
+#nameField{
+    width: 300px;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding-left: 10px;
+    margin-bottom: 10px;
+}
+#emailField{
+    width: 300px;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding-left: 10px;
+    margin-bottom: 10px;
+}
+
+#messageField{
+    width: 67.5%;
+    height: 100px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding-left: 10px;
+    margin-bottom: 10px;
+}
+
+#btn{
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: #30324A;
+    color: white;
+    cursor: pointer;
+
+}
