--- a/styles.css
+++ b/styles.css
@@ -1,204 +1,198 @@
- body{
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    background-color: #F9F9FA;
-    min-height: 100vh;
-   
-    display: flex;
-    flex-direction: column;
-    
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  background-color: #f9f9fa;
+  min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
 }
 
-.container{
-     min-height: 100%;
+.container {
+  min-height: 100%;
 }
 
-.header-wrapper{
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #f2f2f2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
+.header-wrapper {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #f2f2f2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 5px;
-    width: 82%;
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 5px;
+  width: 82%;
 }
 
-ul{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
 }
 
-li{
-    list-style: none;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
+li {
+  list-style: none;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
-li a{
-    text-decoration: none;
-    color: black;
-}
-
-a{
-    text-decoration: none;
-    color: black;
+li a {
+  text-decoration: none;
+  color: black;
 }
 
-.home-title{
-    margin-left: 9%;
-    margin-top: 50px;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-.Section-wrapper{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
+.home-title {
+  margin-left: 9%;
+  margin-top: 50px;
 }
 
-.Section{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 10px 20px;
-    flex: 1;
-    border-radius: 5px;
-    height: 700px;
-    width: 80%;
-    flex-wrap: wrap;
+.Section-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 
-.left{
-    display: flex;
-    flex-direction: column;
-   gap: 30px;
-   margin-bottom: 30px;
+.Section {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10px 20px;
+  flex: 1;
+  border-radius: 5px;
+  height: 700px;
+  width: 80%;
+  flex-wrap: wrap;
 }
 
-.left-box{
-    background-color: #fff;
-    width: 300px;
-    height: 300px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.left {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-bottom: 30px;
 }
 
-.middle{
-    display: flex;
-    flex-direction: column;
-   gap: 30px;
-   margin-bottom: 30px;
+.left-box {
+  background-color: #fff;
+  width: 300px;
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.middle-box{
-    background-color: #B4E4FF;
-    width: 300px;
-    height: 300px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
+.middle {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-bottom: 30px;
 }
 
-.right{
-    height: 640px;
-    margin-bottom: 30px;
+.middle-box {
+  background-color: #b4e4ff;
+  width: 300px;
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.right-box{
-    background-color: #F7C8E0;
-    border-radius: 10px;
-    height: 100%;
-    width: 300px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.right {
+  height: 640px;
+  margin-bottom: 30px;
 }
 
-.footer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #30324A;
-    color: white;
-    height: 50px;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
+.right-box {
+  background-color: #f7c8e0;
+  border-radius: 10px;
+  height: 100%;
+  width: 300px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.contact-wrapper{
-    margin-left: 9%;
-    margin-top: 50px;
-    width: 35%;
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #30324a;
+  color: white;
+  height: 50px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
 
-.input-fields{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-bottom: 10px;
-}
-#nameField{
-    width: 300px;
-    height: 30px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding-left: 10px;
-    margin-bottom: 10px;
-}
-#emailField{
-    width: 300px;
-    height: 30px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding-left: 10px;
-    margin-bottom: 10px;
+.contact-wrapper {
+  margin-left: 9%;
+  margin-top: 50px;
+  width: 35%;
 }
 
-#messageField{
-    width: 98%;
-    height: 100px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding-left: 10px;
-    margin-bottom: 2px;
+.input-fields {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+#nameField {
+  width: 300px;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding-left: 10px;
+  margin-bottom: 10px;
+}
+#emailField {
+  width: 300px;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding-left: 10px;
+  margin-bottom: 10px;
 }
 
-#btn{
-    width: 100px;
-    height: 30px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background-color: #B4E4FF;
-    color: white;
-    cursor: pointer;
-
+#messageField {
+  width: 98%;
+  height: 100px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding-left: 10px;
+  margin-bottom: 2px;
 }
 
-#btn:hover{
-    background-color: #A3D4F5;
-    color: white;
+#btn {
+  width: 100px;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #b4e4ff;
+  color: white;
+  cursor: pointer;
 }
 
+#btn:hover {
+  background-color: #a3d4f5;
+  color: white;
+}
 
 /* Media Queries */
- @media screen and (max-width: 768px){
-    .contact-wrapper{
-        width: 100%;
-    }
-    #messageField{
-        width: 78%;
-    }
+@media screen and (max-width: 768px) {
+  .contact-wrapper {
+    width: 100%;
+  }
+  #messageField {
+    width: 78%;
+  }
 }
