--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: #f9f9fa;
   min-height: 100vh;
 
@@ -9,27 +9,7 @@ body {
   flex-direction: column;
 }
 
-.container {
-  min-height: 100%;
-}
 
-.header-wrapper {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #f2f2f2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-radius: 5px;
-  width: 82%;
-}
 
 ul {
   display: flex;
@@ -60,79 +40,9 @@ a {
   margin-top: 50px;
 }
 
-.Section-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 30px;
-}
 
-.Section {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 10px 20px;
-  flex: 1;
-  border-radius: 5px;
-  height: 700px;
-  width: 80%;
-  flex-wrap: wrap;
-}
 
-.left {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  margin-bottom: 30px;
-}
 
-.left-box {
-  background-color: #fff;
-  width: 300px;
-  height: 300px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.middle {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  margin-bottom: 30px;
-}
-
-.middle-box {
-  background-color: #b4e4ff;
-  width: 300px;
-  height: 300px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.right {
-  height: 640px;
-  margin-bottom: 30px;
-}
-
-.right-box {
-  background-color: #f7c8e0;
-  border-radius: 10px;
-  height: 100%;
-  width: 300px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #30324a;
-  color: white;
-  height: 50px;
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-}
 
 .contact-wrapper {
   margin-left: 9%;
