--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,58 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
-  background-color: #f9f9fa;
+  font-family: "inter", sans-serif;
   min-height: 100vh;
-
-  display: flex;
-  flex-direction: column;
 }
 
+.nav__container{
+   display: flex;
+   justify-content: center;
+    align-items: center;
+}
+
+.nav__wrapper{
+max-width: 80%;
+display: flex;
+justify-content: space-between;
+align-items: center;
+gap: 9rem;
+padding-top: 2rem;
+}
+.home__link{
+  color: #F55253;
+}
+.search-cart{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+.search{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+}
+.search__input{
+  border: 1px solid #ccc;
+  padding: 0.5rem 1rem;
+  border-top-left-radius: 0.9rem;
+  border-bottom-left-radius: 0.9rem;
+  outline: none;
+  border-right: none;
+}
+
+.search-icon{
+  padding: 0.4rem 0.5rem;
+  border-top-right-radius: 0.9rem;
+  border-bottom-right-radius: 0.9rem;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  outline: none;
+  background-color: white;
+  border-left: none;
+}
 
 
 ul {
