--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,20 @@ body {
   padding: 0;
   font-family: "inter", sans-serif;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.nav__container{
+.container{
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+/* .nav__container{
    display: flex;
    justify-content: center;
     align-items: center;
-}
+} */
 
 .nav__wrapper{
 max-width: 80%;
@@ -83,6 +90,46 @@ a {
   margin-left: 9%;
   margin-top: 50px;
 }
+.intro-feature{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 14rem;
+  gap: 1rem;
+  margin-top: 5rem;
+  background: #FDECEC;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  position: relative;
+  border-radius: 1.5rem;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  
+}
+.pear{
+position: absolute;
+top: 0.5rem;
+right: 0.5rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
