--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,6 @@ a {
   align-items: center;
   max-width: 14rem;
   gap: 1rem;
-  margin-top: 5rem;
   background: #FDECEC;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -105,21 +104,78 @@ a {
   font-family: Poppins;
   font-style: normal;
   font-weight: 500;
-  
+
 }
 .pear{
 position: absolute;
 top: 0.5rem;
 right: 0.5rem;
 }
+.hero-section{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5rem;
+  margin-top: 5rem;
+ 
+}
+.right-hero-section{
+  display: flex;
+  flex-direction: column;
+ 
+}
+.red-text{
+  color: #F54748;
+}
+.hero-large-text{
+color: #2E2E2E;
+font-family: Poppins;
+font-size: 4.6rem;
+font-style: normal;
+font-weight: 700;
+line-height: 88px; /* 118.919% */
+letter-spacing: -0.74px;
+}
 
+.light-text{
+  color: #676767;
+font-family: Poppins;
+font-size: 1.1rem;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; /* 166.667% */
+letter-spacing: 0.09px;
+}
+.call-to-action{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 5rem;
+}
+.order-button{
+  background: #F86061;
+border-radius: 1.5rem;
+padding: 1rem 2rem;
+color: white;
+border: none;
+}
 
+.play-button{
+  border-radius: 50%;
+  width: 70px;
+height: 70px;
+flex-shrink: 0;
+border: none;
+}
 
-
-
-
-
-
+.play-wrapper{
+  background:#ffffff;
+  border:none
+}
+.play{
+  display: flex;
+  padding-right: 6rem;
+}
 
 
 
