--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ right: 0.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 5rem;
+  gap: 0;
   margin-top: 5rem;
  
 }
