add features section assets

--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,65 @@ border: none;
   display: flex;
   padding-right: 6rem;
 }
+.features{
+  background: #FEF5F5;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
