--- a/styles.css
+++ b/styles.css
@@ -177,10 +177,59 @@ border: none;
   padding-right: 6rem;
 }
 .features{
-  background: #FEF5F5;
+  background: #FEF5F5; 
+  padding-top: 6.25rem;
+  padding-bottom: 8.25rem;
 }
 
-
+.feature-container{
+  max-width: 80%;
+  margin: 0 auto;
+}
+.feature__intro{
+ text-align: center;
+}
+.feature__intro p{
+  color: #F54748;
+}
+.feature__intro h2{
+  color: #2E2E2E;
+text-align: center;
+font-family: Poppins;
+font-size: 2.5rem;
+font-style: normal;
+font-weight: 700;
+line-height: 54px; /* 135% */
+text-transform: capitalize;
+}
+.features__wrapper{
+  display: flex;
+  justify-content:space-around;
+  align-items:center;
+}
+.feature__item{
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3.3rem;
+  height: 100%;
+}
+.feature__image{
+  margin-left: auto;
+  margin-right: auto;
+}
+.feature__image img{
+  width: 80px;
+  height: 70px;
+}
+.feature__text{
+  text-align: center;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-bottom: 1.5rem;
+}
 
 
 
