--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,12 @@ text-transform: capitalize;
   justify-content: center;
   align-items: center;
   padding-top: 3.3rem;
+  padding-bottom: 3.3rem;
   height: 100%;
+  border-radius: 0.9rem;
+  border-radius: 12px;
+box-shadow: 0px 40px 120px 0px rgba(50, 8, 8, 0.06);
+position: relative;
 }
 .feature__image{
   margin-left: auto;
@@ -230,7 +235,31 @@ text-transform: capitalize;
   padding-right: 1.5rem;
   padding-bottom: 1.5rem;
 }
+#middle__box {
+ position: relative;
+}
+.skewed__box {
+  position: absolute;
+  border-radius: 0.75rem;
+  width: 310px;
+  height: 334px;
+  top: 0;
+  left: 1rem;
+  transform: rotate(-3deg);
+  z-index: -1;
+}
 
+.skewed__box::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  background: #FE6A6A;
+  z-index: -1;
+}
 
 
 
