--- a/styles.css
+++ b/styles.css
@@ -262,11 +262,56 @@ position: relative;
   z-index: -1;
 }
 
+.why__choose{
+  display: flex;
+  max-width: 80%;
+  margin: 0 auto;
+  padding-top: 5.5rem;
+  gap: 9rem;
+  align-items: center;
+  padding-bottom: 5.5rem;
+}
+.choose__image{
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 48rem;
+  max-height: 32rem;
+  border-radius: 2rem;
+}
+.why__choose__text__title{
+  color: #03A66B;
+  font-family: Poppins;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 54px; /* 135% */
+  text-transform: capitalize;
+}
 
+.why__choose__text__subtitle{
+  color: #2E2E2E;
+font-family: Poppins;
+font-size: 40px;
+font-style: normal;
+font-weight: 700;
+line-height: 54px; /* 135% */
+text-transform: capitalize;
+}
+ .desc__text__wrapper{
+  max-width: 30rem;
+ }
 
-
-
-
+.styled_choice{
+  color: #F54748;
+}
+.order-button-choice{
+  background: #F86061;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
+  color: white;
+  border: none;
+  margin-top: 2rem;
+}
 
 
 
