--- a/styles.css
+++ b/styles.css
@@ -312,9 +312,60 @@ text-transform: capitalize;
   border: none;
   margin-top: 2rem;
 }
-
-
-
+.delivery__section{
+  display: flex;
+  max-width: 80%;
+  margin: 0 auto;
+  padding-top: 5.5rem;
+  gap: 9rem;
+  align-items: center;
+  padding-bottom: 5.5rem;
+}
+.intro__feature{
+  color: #F9BA45;
+  font-family: "inter", sans-serif;
+font-size: 1.1rem;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 133.333% */
+letter-spacing: 0.18px;
+}
+.intro__title{
+  color: #2E2E2E;
+font-family: Poppins;
+font-size: 2.5rem;
+font-style: normal;
+font-weight: 700;
+line-height: 54px; /* 135% */
+text-transform: capitalize;
+}
+.delivery__body__text{
+  color: #676767;
+font-family: Poppins;
+font-size: 1.13rem;
+font-style: normal;
+font-weight: 400;
+line-height: 1.8rem; /* 166.667% */
+}
+.delivery__callTo__action button{
+  border-radius: 12px;
+border: 1.5px solid #F86061;
+padding: 1rem 2rem;
+margin-top: 2rem;
+background-color: #ffffff;
+}
+.cheese__image{
+  max-width: 42.7rem;
+  max-height: 41.4rem;
+}
+.right__sectio{
+  position: relative;
+}
+.bike__delivery{
+  position: absolute;
+  top: o;
+  left: 0;
+}
 
 
 
