--- a/styles.css
+++ b/styles.css
@@ -368,11 +368,60 @@ background-color: #ffffff;
   top: 7rem;
   left: -8rem;
 }
+.CTA{
+ 
+    background: #FEF5F5; 
+    padding-top: 6.25rem;
+    padding-bottom: 8.25rem;
+}
+.CTA__wrapper{
+  max-width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 
-
-
-
-
+}
+.download__intro{
+color: #F54748;
+font-family: "inter", sans-serif;
+font-size: 1.1rem;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 133.333% */
+letter-spacing: 0.18px;
+}
+.download__title{
+  color: #2E2E2E;
+  font-family: Poppins;
+  font-size: 2.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 54px; /* 135% */
+  text-transform: capitalize;
+}
+.download__body__text{
+  color: #676767;
+font-family: Poppins;
+font-size: 1.13rem;
+font-style: normal;
+font-weight: 400;
+line-height: 1.8rem; /* 166.667% */
+}
+.download__callTo__action{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+.download__callTo__action button{
+  border-radius: 12px;
+  border: 1.5px solid #EEDCDC;
+  background: #FEF5F5; 
+  padding: 0.6rem 2rem;
+  display: flex;
+  gap: 2rem;
+}
 
 
 
