--- a/styles.css
+++ b/styles.css
@@ -62,26 +62,26 @@ padding-top: 2rem;
 }
 
 
-ul {
+.nav-links ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 20px;
 }
 
-li {
+.nav-links ul li {
   list-style: none;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 20px;
   padding-right: 20px;
 }
-li a {
+.nav-links ul a {
   text-decoration: none;
   color: black;
 }
 
-a {
+.nav-links ul li a {
   text-decoration: none;
   color: black;
 }
@@ -422,9 +422,66 @@ line-height: 1.8rem; /* 166.667% */
   display: flex;
   gap: 2rem;
 }
+.footer{
+  max-width: 80%;
+  margin: 0 auto;
+  padding-top: 6.25rem;
+  padding-bottom: 8.25rem;
+}
+.footer__links{
+  display: flex;
+  gap: 10rem;
+  justify-content: center;
+  color: #676767;
+}
+/* .footer__title{
+  text-align: center;
+} */
+.footer__links ul{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-left: 0;
+}
+.footer__links ul li{
+  list-style: none;
+ 
+}
+.footer__links ul li a{
+  text-decoration: none;
+  color: #676767;
+font-family: Poppins;
+font-size: 0.9rem;
+font-style: normal;
+font-weight: 400;
+line-height: 1.8rem; /* 166.667% */
+}
+.footer__form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+  margin-top: 2rem;
+}
 
-
-
+.footer__form input{
+ padding: 0.5rem 1rem;
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  outline: none;
+  border-right: none;
+  border: 1px solid #ccc;
+}
+.footer__form button{
+  padding: 0.5rem 1rem;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  outline: none;
+  border-left: none;
+  border: 1px solid #ccc;
+  background-color: #FEF5F5;
+  cursor: pointer;
+}
 
 
 
