--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,12 @@ body {
   background-color: #f9f9fa;
 }
 
-.container{
+.nav__container{
   max-width: 80%;
   margin: 0 auto;
 }
 
 .nav__wrapper{
-max-width: 80%;
 display: flex;
 justify-content: space-between;
 align-items: center;
@@ -113,6 +112,8 @@ right: 0.5rem;
   gap: 0;
   margin-top: 5rem;
   padding-bottom: 4.8rem;
+  max-width: 80%;
+  margin: 0 auto;
  
 }
 .right-hero-section{
