--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #f9f9fa;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .nav__container{
@@ -16,13 +18,25 @@ body {
 
 .nav__wrapper{
 display: flex;
-justify-content: space-between;
+justify-content: center;
 align-items: center;
 gap: 14rem;
 padding-top: 2rem;
+
 }
 .home__link{
   color: #F55253;
+}
+
+.hamburger{
+  display: none;
+}
+.line{
+  width: 30px;
+  height: 3px;
+  background-color: black;
+  margin: 5px;
+  border-radius: 5px;
 }
 .search-cart{
   display: flex;
@@ -61,15 +75,15 @@ padding-top: 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .nav-links ul li {
   list-style: none;
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 .nav-links ul a {
   text-decoration: none;
@@ -510,13 +524,66 @@ hr{
 }
 
 
+@media (max-width: 1536px){
+  .nav__wrapper{
+    gap: 10rem;
+  }
+  .nav-links ul{
+    gap: 1rem;
+  }
+  .search-cart{
+
+  }
+}
 
 
+@media (max-width: 1280px){
+  .nav__wrapper{
+    gap: 5rem;
+  }
+  .nav-links ul{
+    gap: 0.5rem;
+  }
 
+  .search-cart{
 
+  }
+}
+@media (max-width: 1024px){
+  .nav__wrapper{
+    gap: 12%;
+  }
+  .search-cart{
+   position: absolute;
+   top: 7rem;
+  }
 
+}
 
+@media (max-width: 768px){
+    .hamburger{
+      display: block;
+      cursor: pointer;
+    }
+    .nav-links{
+      display: none;
+    }
+    .nav__wrapper{
+      gap:28rem;
+      
+    }
 
+}
+@media (max-width: 648px){
+  .nav__wrapper{
+    gap: 50%;
+    
+  }
+}
+
+@media (max-width: 457px){
+
+}
 
 
 
