--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,13 @@ padding-top: 2rem;
 .line{
   width: 30px;
   height: 3px;
-  background-color: black;
+  background-color:#F55253;
   margin: 5px;
   border-radius: 5px;
+}
+.hamburger .short{
+  width: 24px;
+  margin-left: auto; 
 }
 .search-cart{
   display: flex;
