--- a/styles.css
+++ b/styles.css
@@ -3,25 +3,28 @@ body {
   padding: 0;
   font-family: "inter", sans-serif;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   background-color: #f9f9fa;
-  /* justify-content: center;
-  align-items: center; */
+  overflow-x: hidden;
 }
 
+.nav{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .nav__container{
-  max-width: 80%;
-  margin: 0 auto;
-  padding-bottom: 5rem;
+  padding-bottom: 2rem;
+  max-width: 90%;
+
 }
 
 .nav__wrapper{
 display: flex;
-justify-content: center;
+justify-content: space-between;
 align-items: center;
 gap: 14rem;
 padding-top: 2rem;
+width: 100%;
 
 }
 .home__link{
@@ -526,14 +529,14 @@ hr{
   text-decoration: none;
   color: #676767;
 }
-
+ 
 
 @media (max-width: 1536px){
   .nav__wrapper{
-    gap: 10rem;
+    gap: 5rem;
   }
   .nav-links ul{
-    gap: 1rem;
+    gap: 0.7rem;
   }
   .search-cart{
 
@@ -543,7 +546,7 @@ hr{
 
 @media (max-width: 1280px){
   .nav__wrapper{
-    gap: 5rem;
+    gap: 3rem;
   }
   .nav-links ul{
     gap: 0.5rem;
@@ -553,19 +556,26 @@ hr{
 
   }
 }
+
 @media (max-width: 1024px){
   .nav__wrapper{
-    gap: 12%;
+    gap: 2rem;
   }
   .search-cart{
    position: absolute;
    top: 7rem;
+   left: 33%;
   }
 
 }
 
 @media (max-width: 768px){
-    .hamburger{
+ 
+}  
+ 
+
+@media (max-width: 648px){
+     .hamburger{
       display: block;
       cursor: pointer;
     }
@@ -573,21 +583,27 @@ hr{
       display: none;
     }
     .nav__wrapper{
-      gap:28rem;
+     gap: 8rem;
       
     }
-
+    .search-cart{
+      position: absolute;
+      top: 6rem;
+      left: 14%;
+     }
 }
-@media (max-width: 648px){
+
+@media (max-width: 330px){
   .nav__wrapper{
-    gap: 50%;
-    
+    gap: 6rem;
   }
-}
-
-@media (max-width: 457px){
-
-}
+  .search-cart{
+    position: absolute;
+    top: 6rem;
+    left: 6%;
+    width: 10rem;
+   }
+}  
 
 
 
