--- a/styles.css
+++ b/styles.css
@@ -591,7 +591,7 @@ hr{
       width: 100%;
       background-color: #03A66B;
       z-index: -1;
-      transition: all 0.5s ease-in;
+      transition: all 0.3s ease-in;
     }
     .nav-links.open{
       height: 100vh;
@@ -624,10 +624,12 @@ hr{
     }
 
     .search-cart{
-      display: none;
       position: absolute;
       top: 6rem;
       left: 14%;
+     }
+     .search-cart.open{
+        display: none;
      }
 }
 
