--- a/styles.css
+++ b/styles.css
@@ -631,6 +631,37 @@ hr{
      .search-cart.open{
         display: none;
      }
+     .hero-section{
+       margin-top: 2rem;
+       flex-direction: column;
+        gap: 3rem;
+     }
+     .hero-large-text{
+        font-size: 2.5rem;
+        line-height: 2.8rem;
+      
+     }
+     .intro-feature{
+       display: none;
+     }
+     .hero-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+     }
+     .light-text{
+       font-size: 0.8rem;
+       max-width: 18rem;
+       line-height: 1.1rem;
+     }
+     .call-to-action{
+      margin-top: 1.5rem;
+     }
+      .order-button{
+        padding: 0.4rem 1.5rem;
+        font-size: 0.7rem;
+      }
 }
 
 @media (max-width: 330px){
