--- a/styles.css
+++ b/styles.css
@@ -689,6 +689,9 @@ hr{
      .search-cart.open{
         display: none;
      }
+     .right-hero-section{
+      max-width: 100%;
+    }
      .hero-section{
        margin-top: 2rem;
        flex-direction: column;
@@ -710,7 +713,7 @@ hr{
      }
      .light-text{
        font-size: 0.8rem;
-       max-width: 18rem;
+       max-width: 98%;
        line-height: 1.1rem;
      }
      .call-to-action{
