--- a/styles.css
+++ b/styles.css
@@ -237,11 +237,10 @@ text-transform: capitalize;
   align-items: center;
   padding-top: 3.3rem;
   padding-bottom: 3.3rem;
-  height: 100%;
   border-radius: 0.9rem;
   border-radius: 12px;
-box-shadow: 0px 40px 120px 0px rgba(50, 8, 8, 0.06);
-position: relative;
+  box-shadow: 0px 40px 120px 0px rgba(50, 8, 8, 0.06);
+  position: relative;
 }
 .feature__image{
   margin-left: auto;
@@ -571,6 +570,9 @@ hr{
     font-size: 0.8rem;
     line-height: 1rem;
     white-space: nowrap;
+  }
+  .features__wrapper{
+    gap: 6rem;
   }
 }
 
