--- a/styles.css
+++ b/styles.css
@@ -240,7 +240,7 @@ text-transform: capitalize;
   border-radius: 0.9rem;
   border-radius: 12px;
   box-shadow: 0px 40px 120px 0px rgba(50, 8, 8, 0.06);
-  position: relative;
+ 
 }
 .feature__image{
   margin-left: auto;
@@ -626,6 +626,9 @@ hr{
   .call-to-action{
     gap: 2rem;
     margin-top: 1.5rem;
+  }
+  .features__wrapper{
+    gap: 4rem;
   }
 }
 
