--- a/styles.css
+++ b/styles.css
@@ -240,7 +240,7 @@ text-transform: capitalize;
   border-radius: 0.9rem;
   border-radius: 12px;
   box-shadow: 0px 40px 120px 0px rgba(50, 8, 8, 0.06);
- 
+  height: 100%;
 }
 .feature__image{
   margin-left: auto;
@@ -603,12 +603,12 @@ hr{
     margin-top: 1.5rem;
   }
   .features__wrapper{
-    gap: 4rem;
+    gap: 2rem;
   }
   .feature__item{
     padding-top: 2rem;
     padding-bottom: 2rem;
-    width: 15rem;
+    max-height: 14rem;
   }
 }
 
