--- a/styles.css
+++ b/styles.css
@@ -726,6 +726,14 @@ hr{
         width: 28.5rem;
         height: 20.7rem;
       }
+      .features__wrapper{
+        flex-direction: column;
+        gap: 2rem;
+      }
+      .feature__intro h2{
+        font-size: 1.5rem;
+        line-height: 2.8rem;
+      }
 }
 
 @media (max-width: 330px){
