--- a/styles.css
+++ b/styles.css
@@ -791,9 +791,13 @@ hr{
  
 
 @media (max-width: 648px){
+  .logo{
+     z-index: 2;
+  }
   .hamburger{
     display: block;
     cursor: pointer;
+    z-index: 2;
   }
     .nav__wrapper{
      gap: 8rem;
@@ -806,7 +810,7 @@ hr{
       height: 0;
       width: 100%;
       background-color: #03A66B;
-      z-index: -1;
+      z-index: 1;
       transition: all 0.3s ease-in;
     }
     .nav-links.open{
