--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,8 @@ body {
  padding: 0.3rem 0.6rem;
   border-radius: 50%;
   position: absolute;
-  top: 0.5rem;
+  top: -1rem;
+  right: -1.4rem;
 
 }
 .intro-feature {
